--- a/docs/technology/quick-installation.mdx
+++ b/docs/technology/quick-installation.mdx
@@ -14,7 +14,7 @@ Currently our team is working very hard on core features. There may be missing s
 
 :::
 
-- Ubuntu Focal
+- Ubuntu Focal (x86)
 
 ## Using the Web Script
 
